--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -498,14 +498,14 @@ beautifully (i.e. San separated first, followed by Mbuti, etc.).
 
 ## qpWave and qpAdm
 
-Both _qpWave_ and _qpAdm_ can be though of as more complex and powerful extensions of
-the basic idea behind a simple $f_4$ statistic. Building upon this idea
-and generalizing it (working with matrix of $f_$ statistics, instead of just one),
-the _qpWave_ method  makes it possible to find the lowest number of "streams of ancestry" 
-between two groups of populations that is consistent with the data. Extending the concept 
-of $f_4$ statistics even further, _qpAdm_ allows to find the proportions of ancestry
-from a set of ancestral populations that contributed ancestry to our sample or
-population of interest.
+Both _qpWave_ and _qpAdm_ can be though of as more complex and powerful
+extensions of the basic idea behind a simple $f_4$ statistic. Building upon this
+idea and generalizing it, the _qpWave_ method  makes it possible to find the
+lowest number of "streams of ancestry" between two groups of populations that is
+consistent with the data. Extending the concept of $f_4$ statistics even
+further, _qpAdm_ allows to find the proportions of ancestry from a set of
+ancestral populations that contributed ancestry to our sample or population of
+interest.
 
 Unfortunately, both methods represent a rather advanced topic that still lacks
 a proper documentation and beginner-friendly tutorials, and explaining them in detail 
@@ -515,10 +515,10 @@ ADMIXTOOLS](https://github.com/DReichLab/AdmixTools/blob/master/pdoc.pdf)),
 _and_ that you read the relevant supplementary sections of papers published
 by David Reich's group. At the very least, I recommend reading:
 
-- Note S6 of _"[Reconstructing Native American population history]"_(https://www.nature.com/articles/nature11258) by Reich et al. This paper
+- Note S6 of _"[Reconstructing Native American population history](https://www.nature.com/articles/nature11258)"_ by Reich et al. This paper
 first introduced the theoretical background of what later became _qpWave_.
 
-- Supplementary Information 10 of _"[Massive migration from the steppe was a source for Indo-European languages in Europe]"_(https://www.nature.com/articles/nature14317) by Haak et al., which gives a more consise
+- Supplementary Information 10 of _"[Massive migration from the steppe was a source for Indo-European languages in Europe](https://www.nature.com/articles/nature14317)"_ by Haak et al., which gives a more consise
 overview of the _qpWave_ method than S6 of Reich et al. 2012, and also introduces the
 _qpAdm_ methodology for estimating admixture proportions.
 
@@ -536,14 +536,16 @@ To run _qpWave_, you must provide a list of _left_ and _right_ populations
 (using the terminology of Haak et al. 2015 above). The aim of the method is to get
 an idea about the number of migration waves from _right_ to _left_ (with no
 back-migration from _left_ to _right_!). This is done by estimating the
-rank of a matrix of all possible $f_4$ statistics $f_4(\textrm{left}_1, \textrm{left}_i; \textrm{right}_1, \textrm{right}_i)$,
-where $\textrm{left}_1$ and $\textrm{right}_1$ are some fixed populations from _left_ and
-_right_ sets and the $i$ and $j$ indices run over all other possible choices of
-populations from both sets.
+rank of a matrix of all possible $f_4$ statistics
 
-As an example, let's evaluate the number of admixture waves from _right_ =
+$f_4(\textrm{left}_1, \textrm{left}_i; \textrm{right}_1, \textrm{right}_i),$
+
+where $\textrm{left}_1$ and $\textrm{right}_1$ are some fixed populations and
+the $i$ and $j$ indices run over all other possible choices of populations.
+
+As an example, let's try to find the number of admixture waves from _right_ =
 {Yoruba, Mbuti, Alta} into _left_ = {French, Sardinian, Han}. We can
-do this using the `qpWave()` function, setting arguments appropriately:
+do this using the function `qpWave()`, setting its arguments appropriately:
 
 ```{r}
 result <- qpWave(
@@ -553,22 +555,25 @@ result <- qpWave(
 )
 ```
 
-The `qpWave()` function will return a data frame which shows the results of a series of
+The `qpWave()` function returns a data frame which shows the results of a series of
 matrix rank tests. The `rank` column is the matrix rank tested, `df`, `chisq` and
 `tail` give ..., and `dfdiff`, `chisqdiff` and `taildiff` give the same, but always
 comparing the fit to the fit of a rank immediately lower.
 
-```{r}
+```{r, eval = FALSE}
 result
 ```
 
-In this example, we see that we cannot reject the possibility that the $f_4$
-matrix has a rank $r = 0$ (`tail` $p$-value = 0.684 - not rejected; rank would
-be rejected if the $p$-value is low). Because Reich et al. 2012 showed that
-$r + 1 \le n$, where $n$ is the number of admixture waves, this means that the data
-is consistent with _left_ populations having at least $n = 1$ streams of
-ancestry from the set of _right_ populations - most likely due to Neandertal
-admixture present in non-Africans today.
+```{r, echo = FALSE}
+knitr::kable(result)
+```
+
+In this example, we see that matrix $r = 0$ cannot be rejected (`tail` $p$-value
+= 0.684 - not rejected). Because Reich et al. 2012 showed that $r + 1 \le n$,
+where $n$ is the number of admixture waves, we can interpret this as _left_
+populations having at least $n = 1$ streams of ancestry from the set of _right_
+populations. In this case, the most likely explanation is Neandertal admixture
+in non-Africans today.
 
 Now, what happens if we add Papuans to the _left_ group?
 
@@ -580,17 +585,22 @@ result <- qpWave(
 )
 ```
 
-We can now clearly reject rank $r = 0$, but we see that the data is consistent
-with rank $r = 1$, meaning that must have been at least $n = 2$ streams of
-ancestry from _right_ to _left_ populations (because $r + 1 \le n$). Because
-this happened after we introduced Papuans to the _left_ set, this could indicate
-a separate pulse of archaic introgression into Papuans, which would not be
-surprising given what we know about the geographical patterns of archaic
-admixture in non-Africans today
-
-```{r}
+```{r, eval = FALSE}
 result
 ```
+
+```{r, echo = FALSE}
+knitr::kable(result)
+```
+
+We can now clearly reject rank $r = 0$, but we see that the data is consistent
+with rank $r = 1$, meaning that there must have been at least $n = 2$ streams of
+ancestry from _right_ to _left_ populations ($r + 1 \le n$). Because
+this happened after we introduced Papuans to the _left_ set, this could indicate
+a separate pulse of archaic introgression into Papuans, which is not
+surprising given what we know about the geographical patterns of archaic
+admixture in non-Africans today, and significantly more introgression observed
+in Papuans than any other present-day population.
 
 
 
@@ -635,8 +645,11 @@ the function return a list of three elements:
 
 Let's start with the `ranks` element:
 
-```{r}
+```{r, eval = FALSE}
 result$ranks
+```
+```{r, echo = FALSE}
+knitr::kable(result$ranks)
 ```
 
 The row with rank = 1 represents a _qpWave_ test with all $n$ _reference_
@@ -664,7 +677,7 @@ at the `proportions` element, that contains an estimated admixture proportion
 from all specified sources, as well as standard errors for those proportion
 estimated using a block jackknife:
 
-```{r, eval=FALSE}
+```{r, eval = FALSE}
 result$proportions
 ```
 
@@ -679,7 +692,7 @@ that the _qpAdm_ estimates are very close to what we got earlier.
 
 
 
-## Grouping population labels
+## Grouping samples
 
 What we've been doing so far was calculating statistics for individual samples.
 However, it is often useful to treat multiple samples as a single group or
@@ -741,29 +754,6 @@ knitr::kable(head(result))
 Note that the `d()` function correctly picks up the "group modifier" `ind` file
 from the provided `EIGENSTRAT` object and uses it in place of the original
 `ind` file.
-
-
-
-
-
-
-
-
-## Merging EIGENSTRAT datasets
-
-Another useful data processing function is `merge_eigenstrat`. This function
-takes two EIGENSTRAT datasets and merges them, producing a union of samples and
-intersection of SNPs from both of them. It returns a new `EIGENSTRAT` object that
-can be directly used in _admixr_ analyses.
-
-```{r merge_eigenstrat, eval = FALSE}
-# this is just an example code - it will not run unless you specify the paths
-merged <- merge_eigenstrat(
-    merged = <prefix_of_the_merged_dataset>
-    a = <first EIGENSTRAT object>,
-    b = <second EIGENSTRAT object>
-)
-```
 
 
 
@@ -902,3 +892,31 @@ snps %>%                                    # take the original data
   d(W = "French", X = "Dinka", Y = "Altai", Z = "Chimp") # calculate D on the filtered dataset
 ```
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+## Merging EIGENSTRAT datasets
+
+Another useful data processing function is `merge_eigenstrat`. This function
+takes two EIGENSTRAT datasets and merges them, producing a union of samples and
+intersection of SNPs from both of them. It returns a new `EIGENSTRAT` object that
+can be directly used in _admixr_ analyses.
+
+```{r merge_eigenstrat, eval = FALSE}
+# this is just an example code - it will not run unless you specify the paths
+merged <- merge_eigenstrat(
+    merged = <prefix_of_the_merged_dataset>
+    a = <first EIGENSTRAT object>,
+    b = <second EIGENSTRAT object>
+)
+```
