--- a/README.Rmd
+++ b/README.Rmd
@@ -36,9 +36,16 @@ analysis entirely from R. It provides a set of convenient functions that
 completely remove the need for "low level" configuration of individual
 ADMIXTOOLS programs, allowing users to focus on the analysis itself.
 
+## How to cite
+
+_admixr_ is now published
+as an [_Application Note_](https://doi.org/10.1093/bioinformatics/btz030) in the journal Bioinformatics. If you use it in your work, please cite the paper!
+
+
+
 ## Installation instructions
 
-**Note (2018/10/30):** This package is currently in the last phase of testing
+**Note (2019/04/06):** This package is currently in the last phase of testing
 and polishing the API before I submit it to [CRAN](https://cran.r-project.org).
 You can definitely safely use it for your own work, but please make sure to
 check back here for instructions on how to install the officially released
