--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -12,7 +12,8 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = ""
+  comment = "",
+  eval = ifelse(.Platform$OS.type == "unix", TRUE, FALSE) # don't evel on Windows
 )
 ```
 
